<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">休闲生活</string>
    <string name="cancel">取消</string> 
    <string name="submit">确定</string>    
    <string name="exit">退出</string>
    <string name="regiest_submit">提交</string>
    <string name="login_name">用户名</string> 
    <string name="login_password">密码</string>
    <string name="regiest_fail">注册失败</string>
    <string name="regiest_success">注册成功</string>
    <string name="login_submit_button">登录</string>
    <string name="regist">注册</string>
    <string name="regiest_name_tip">输入用户名</string>
    <string name="login_remember_pwd">记住密码</string>      
    <string name="autoLogin">自动登录</string>    
    <string name="login_userName_tip">请输入用户名</string>  
    <string name="login_userPwd_tip">请输入密码</string>  
    <string name="login_fail">登录失败!</string>    
    <string name="login_success">登录成功!</string> 
    <string name="input_null">用户名和密码不能为空</string>
    <string name="input_error">用户名或密码错误</string>
    <string name="sure_no_regist">你确定不注册 休闲生活 吗？</string>
    <string name="sure_no_login">确定不登录吗？</string>
    <string name="sure_quit">确定要退出吗?</string>
    <string name="activity">活动</string>
    <string name="commend">推荐</string>
    <string name="save">收藏</string>
    <string name="more">更多</string>
    <string name="h_movie">看电影</string>
    <string name="h_eat">找美食</string>
    <string name="h_display">看展览</string>
    <string name="h_play">看演出</string>
	<string name="exit_alert_text">是否退出休闲生活？</string>
	<string name="exit_yes">是</string>
	<string name="exit_no">否</string>
	<string name="data_error">数据错误</string>
    <string name="importent">重要</string>
    <string name="creat_file_fail">创建文件失败,请检查SDCard!</string>
    <string name="label">类型：</string>
    <string name="player">演员：</string>
    <string name="timelong">时长：</string>
    <string name="time">上映时间：</string>
    <string name="movieinfo">电影介绍：</string>
    <string name="moviecomment">评论:</string>
    <string name="shared">分享</string>
    <string name="recomment">评论</string>
    <string name="back">返回</string>
    <string name="moviedetail">电影详情</string>
    <string name="prev">上一个</string>
    <string name="next">下一个</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="concert">演唱会</string>
    <string name="music">音乐会</string>
    <string name="play">话剧</string>
    <string name="pekingopera">戏曲</string>
    <string name="delicaciesdetail">美食详情</string>
    <string name="display_info">展览介绍</string>
    <string name="show_info">演出介绍</string>
    <string name="map">地图</string>
    <string name="call">电话</string>
    <string name="num">号码:</string>
    <string name="question_thank">感谢您的支持!</string>
</resources>