<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
   >
	<Button
	    android:id="@+id/prev"
	    android:layout_weight="1.0"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/prev"
	    android:textSize="12sp"
	/>
	<Button 
	    android:id="@+id/comment"
	    android:layout_weight="1.0"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	     android:text="@string/comment"
	     android:textSize="12sp"
	/>
	<Button 
	    android:id="@+id/share"
	    android:layout_weight="1.0"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	     android:text="@string/share"
	     android:textSize="12sp"
	/>
	<Button 
	    android:id="@+id/save"
	    android:layout_weight="1.0"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	     android:text="@string/save"
	     android:textSize="12sp"
	/>
	
	<Button 
	    android:id="@+id/next"
	    android:layout_weight="1.0"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/next"
	    android:textSize="12sp"
	/>
</LinearLayout>