<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loading_bg"
>
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_marginTop="20dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/inputlayout"
	>
		<!--用户名提示-->
		<TextView
		    android:text="@string/login_name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/style1"  
		>
		</TextView>
		<!--用户名  -->
		<EditText
		    android:id="@+id/userName"
		    android:hint="@string/login_userName_tip"
		    android:layout_width="280dip"
		    android:layout_height="42dip" 
		    style="@style/style1"
		>
		</EditText>
		 <!--密码提示-->
		<TextView
		    android:text="@string/login_password"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/style1"  
		>
		</TextView>
		 <!--密码-->
		<EditText
		    android:id="@+id/userPwd"
		    android:password="true"
		    android:hint="@string/login_userPwd_tip"
		    android:layout_width="280dip"
		    android:layout_height="42dip"
		    style="@style/style1"   
		></EditText> 
	</LinearLayout>
	<RelativeLayout
	    android:layout_below="@id/inputlayout"
	    android:layout_marginTop="75dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/checklayout"
	>
		 <!--记住密码-->
		<CheckBox
		    android:id="@+id/rememberPwd"
		    android:text="@string/login_remember_pwd"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/regiest"
		    android:layout_marginTop="2dip"
		    android:layout_marginLeft="40dip"
		    android:checked="true"
		/>
		<!-- 自动登录 -->
		<CheckBox
		    android:id="@+id/autoLogin"
		    android:text="@string/autoLogin"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/regiest"
		    android:layout_marginTop="2dip"
		    android:layout_marginLeft="20dip"
		    android:layout_toRightOf="@+id/rememberPwd"
		    android:checked="true"
		/>  
	</RelativeLayout>
		<RelativeLayout
		android:layout_below="@id/checklayout"
	    android:layout_marginTop="20dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	>	
		<!--取消-->
		<Button
		    android:id="@+id/cancel"
		    android:layout_width="110dip"
		    android:layout_height="42dip"
		    android:text="@string/cancel" 
		    android:background="@drawable/registbtn"
		    android:textColor="@color/white">

		</Button> 
		 <!--登录-->
		<Button
		    android:id="@+id/login"
		    android:background="@drawable/registbtn"
		    android:text="@string/login_submit_button"
		    android:layout_width="110dip"
		    android:layout_height="42dip"
		    android:layout_marginLeft="15dip"
		    android:layout_toRightOf="@+id/cancel"
		    android:textColor="@color/white"
		>
		</Button>   
	</RelativeLayout>
</RelativeLayout>
