<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loading_bg"    
    >
 <RelativeLayout
    android:layout_marginTop="10dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
 >  
 <!--用户名提示-->    
 <TextView
    android:text="@string/login_name"
    android:id="@+id/regiest_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="20dip"
    android:textColor="#000FFF"
    android:textSize="14dp"
 />
  <EditText
    android:id="@+id/userName"
    android:hint="@string/regiest_name_tip"
    android:layout_width="230dip"
    android:layout_height="42dip"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="10dip"    
    android:layout_toRightOf="@+id/regiest_name"
    android:textSize="12sp"
 />  
 <!--密码提示-->    
 <TextView
    android:text="@string/login_password"
    android:id="@+id/regiest_pwd"
    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:layout_below="@id/regiest_name"
    android:layout_alignLeft="@id/regiest_name" 
    android:textColor="#000FFF"
    android:textSize="14dp" 
 />
 <EditText
     android:id="@+id/userPwd"
     android:layout_width="230dip"
     android:layout_height="42dip"
     android:layout_alignLeft="@id/userName"
     android:layout_marginTop="15dp"
     android:layout_toRightOf="@+id/regiest_pwd"
     android:layout_below="@id/userName"
     android:password="true" 
     android:textSize="12sp"
     android:hint="@string/login_userPwd_tip"/>
  <!--取消-->
   <Button
    android:id="@+id/cancel"
    android:text="@string/cancel"
    android:layout_width="110dip"
    android:layout_height="42dp"
    android:layout_below="@id/userPwd"
    android:layout_marginTop="20dp"
    android:layout_alignLeft="@id/userPwd"
    android:background="@drawable/registbtn"
	android:textColor="@color/white"
   /> 
   <!--提交-->

   <Button
       android:id="@+id/submit"
       android:layout_width="110dip"
       android:layout_height="42dp"
       android:layout_alignRight="@id/userPwd"
       android:layout_alignTop="@id/cancel"
       android:layout_below="@id/userPwd"
       android:text="@string/regiest_submit"
	   android:background="@drawable/registbtn"
	   android:textColor="@color/white"/>  
 </RelativeLayout> 
</LinearLayout>
