<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
     <TabHost
     android:id="@android:id/tabhost"  
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
    >  
     <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"> 
     <FrameLayout
         android:id="@android:id/tabcontent" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_weight="1.0" />
     <TabWidget 
         android:id="@android:id/tabs"
         android:visibility="gone" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_weight="0.0" />
     <RadioGroup 
         android:gravity="center_vertical" 
         android:orientation="horizontal" 
         android:id="@+id/main_radio" 
         android:background="@drawable/tab_bg" 
         android:layout_width="fill_parent" 
         android:layout_height="50dip">
            <RadioButton 
                android:id="@+id/radio_button0" 
                android:tag="radio_button0" 
                android:layout_marginTop="2.0dip"
                android:text="@string/activity"
               	android:drawableTop="@drawable/icon_1_n"
                style="@style/main_tab_bottom"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radio_button1" 
                android:tag="radio_button1" 
                android:layout_marginTop="2.0dip"
                android:text="@string/commend"
               	android:drawableTop="@drawable/icon_2_n"
                style="@style/main_tab_bottom"/>
            <RadioButton 
                android:id="@+id/radio_button2" 
                android:tag="radio_button2" 
                android:layout_marginTop="2.0dip"
               android:text="@string/save"
               	android:drawableTop="@drawable/icon_3_n"
                style="@style/main_tab_bottom" />
            <RadioButton
                android:id="@+id/radio_button3" 
                android:tag="radio_button3" 
                android:layout_marginTop="2.0dip"
               	android:text="@string/more"
               	android:drawableTop="@drawable/icon_4_n"
                style="@style/main_tab_bottom"/> 
        </RadioGroup>
    </LinearLayout>
 </TabHost> 
</RelativeLayout>